@startuml MLD
top to bottom direction
scale max 3200 width
skinparam shadowing false
skinparam backgroundColor #0F0F14
skinparam linetype ortho
skinparam nodesep 45
skinparam ranksep 55
skinparam defaultFontSize 11
skinparam ArrowFontSize 10
skinparam padding 10
skinparam arrowColor #BBBBBB

title <color:#FFFFFF>MLD — Modèle logique de données (PostgreSQL banque_agence)</color>

skinparam entity {
  BackgroundColor #D8CCE8
  BorderColor #4A4A4A
  FontColor #111111
}

skinparam package {
  BackgroundColor #1E1E28
  BorderColor #888888
  FontColor #FFFFFF
}

package "Noyau — personnel" #1A1A24 {
  entity "users" as users {
    * **id** : BIGINT <<PK>>
    --
    * username : VARCHAR(50) <<UK>>
    * password_hash : VARCHAR(255)
    * full_name : VARCHAR(100)
    email : VARCHAR(100)
    * role : user_role
    * enabled : BOOLEAN
    created_at · last_login_at
  }
}

package "Noyau — clients & comptes" #1A1A24 {
  entity "clients" as clients {
    * **id** : BIGINT <<PK>>
    --
    * client_number : VARCHAR(20) <<UK>>
    * cin : VARCHAR(20) <<UK>>
    * first_name · last_name
    email · phone · address
    * status : client_status
    password_hash · portal_enabled
    created_at · updated_at · last_login_at
  }

  entity "accounts" as accounts {
    * **id** : BIGINT <<PK>>
    --
    * account_number : VARCHAR(20) <<UK>>
    * **client_id** : BIGINT <<FK>>
    * type : account_type
    * status : account_status
    * balance : NUMERIC(19,4)
    opened_at · closed_at
    * version : BIGINT
  }
}

package "Noyau — transactions" #1A1A24 {
  entity "transactions" as transactions {
    * **id** : BIGINT <<PK>>
    --
    * type : transaction_type
    * amount : NUMERIC(19,4)
    source_account_id : BIGINT <<FK>>
    destination_account_id : BIGINT <<FK>>
    * **executed_by** : BIGINT <<FK>>
    * executed_at : TIMESTAMPTZ
    description : VARCHAR(255)
  }
}

package "Extensions" #1A1A24 {
  entity "bill_providers" as bill_providers {
    * **id** : BIGINT <<PK>>
    --
    * code : VARCHAR(20) <<UK>>
    * name : VARCHAR(100)
    category · * active
  }

  entity "bill_payments" as bill_payments {
    * **id** : BIGINT <<PK>>
    --
    * **account_id** : BIGINT <<FK>>
    * **bill_provider_id** : BIGINT <<FK>>
    * client_reference : VARCHAR(50)
    * amount : NUMERIC(19,4)
    * **transaction_id** : BIGINT <<FK>> <<UK>>
    created_at
  }

  entity "checkbook_orders" as checkbook_orders {
    * **id** : BIGINT <<PK>>
    --
    * order_number : VARCHAR(20) <<UK>>
    * **account_id** · **client_id** : BIGINT <<FK>>
    * quantity · sheet_count
    * status : checkbook_order_status
    requested_at · processed_at · delivered_at
    * **requested_by** : BIGINT <<FK>>
    notes
  }
}

package "Traçabilité" #1A1A24 {
  entity "notifications" as notifications {
    * **id** : BIGINT <<PK>>
    --
    user_id : BIGINT <<FK>>
    client_id : BIGINT <<FK>>
    * type · title · message
    link · * read · created_at
  }

  entity "audit_logs" as audit_logs {
    * **id** : BIGINT <<PK>>
    --
    * action · entity_type · entity_id
    * **performed_by** : BIGINT <<FK>>
    * performed_at : TIMESTAMPTZ
    details : TEXT
  }
}

' ── FK relations ──
clients ||--o{ accounts : client_id
clients ||--o{ checkbook_orders : client_id
clients ||--o{ notifications : client_id

users ||--o{ transactions : executed_by
users ||--o{ checkbook_orders : requested_by
users ||--o{ audit_logs : performed_by
users ||--o{ notifications : user_id

accounts ||--o{ transactions : source_account_id
accounts ||--o{ transactions : destination_account_id
accounts ||--o{ bill_payments : account_id
accounts ||--o{ checkbook_orders : account_id

bill_providers ||--o{ bill_payments : bill_provider_id
transactions ||--|| bill_payments : transaction_id

' ── Layout ──
users -[hidden]right- clients
clients -[hidden]right- accounts
accounts -[hidden]right- transactions

bill_providers -[hidden]right- bill_payments
bill_payments -[hidden]right- checkbook_orders

notifications -[hidden]right- audit_logs

users -[hidden]down- bill_providers
clients -[hidden]down- bill_payments
accounts -[hidden]down- checkbook_orders
transactions -[hidden]down- notifications

legend bottom right
  |= Info |= Valeur |
  | SGBD | PostgreSQL 16 |
  | Migrations | Flyway V1 → V11 |
  | Tables | 9 entités persistées |
  | Optimistic lock | accounts.version |
endlegend

@enduml
